--- a/SistemaFacturacion/SistemaFacturacion/SistemaFacturacion.csproj
+++ b/SistemaFacturacion/SistemaFacturacion/SistemaFacturacion.csproj
@@ -100,6 +100,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Sistema_FacturacionDataSet2.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Sistema_FacturacionDataSet3.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Sistema_FacturacionDataSet3.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Sistema_FacturacionDataSet4.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Sistema_FacturacionDataSet4.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Sistema_FacturacionDataSet5.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -169,6 +179,28 @@
     </None>
     <None Include="Sistema_FacturacionDataSet2.xss">
       <DependentUpon>Sistema_FacturacionDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="Sistema_FacturacionDataSet3.xsc">
+      <DependentUpon>Sistema_FacturacionDataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="Sistema_FacturacionDataSet3.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Sistema_FacturacionDataSet3.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Sistema_FacturacionDataSet3.xss">
+      <DependentUpon>Sistema_FacturacionDataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="Sistema_FacturacionDataSet4.xsc">
+      <DependentUpon>Sistema_FacturacionDataSet4.xsd</DependentUpon>
+    </None>
+    <None Include="Sistema_FacturacionDataSet4.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Sistema_FacturacionDataSet4.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Sistema_FacturacionDataSet4.xss">
+      <DependentUpon>Sistema_FacturacionDataSet4.xsd</DependentUpon>
     </None>
     <None Include="Sistema_FacturacionDataSet5.xsc">
       <DependentUpon>Sistema_FacturacionDataSet5.xsd</DependentUpon>
